<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Login">


    <android.support.v7.widget.Toolbar
        android:id="@+id/logintoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/black"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="18dp">



            <ImageView
                android:id="@+id/logimgview"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/newlogo" />

            <TextView
                android:id="@+id/logtooltitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"
                android:fontFamily="@font/helveticamedium"
                android:textAlignment="center"
                android:singleLine="true"
                android:text="@string/LogIn"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/logIvcall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/call" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <!--Follow UP-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="5dp"
        android:layout_below="@+id/logintoolbar"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/lluname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:orientation="horizontal"
                android:padding="@dimen/margin_8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/callicon"
                    tools:ignore="VectorDrawableCompat" />


                <EditText
                    android:id="@+id/loguname"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/logusername"
                    android:gravity="center_horizontal"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/black" />


                <View
                    android:id="@+id/v1"
                    android:layout_below="@+id/loguname"
                    android:layout_marginRight="@dimen/margin_8dp"
                    android:layout_marginLeft="@dimen/margin_8dp"

                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="50dp"
                    android:layout_width="250dp"
                    android:layout_height="1dp"
                    android:background="@color/black"/>

            </RelativeLayout>



            <!--password-->
            <RelativeLayout
                android:id="@+id/llpassword"
                android:layout_below="@+id/lluname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="-10dp"
                android:orientation="horizontal"
                android:padding="@dimen/margin_8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/pinicon"
                    tools:ignore="VectorDrawableCompat" />

                <EditText
                    android:id="@+id/edulogpass"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/logPassword"
                    android:gravity="center_horizontal"

                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/black" />


                <View
                    android:id="@+id/v2"
                    android:layout_below="@+id/edulogpass"
                    android:layout_marginRight="@dimen/margin_8dp"
                    android:layout_marginLeft="@dimen/margin_8dp"

                    android:layout_centerHorizontal="true"
                    android:layout_width="250dp"
                    android:layout_marginStart="50dp"
                    android:layout_height="1dp"
                    android:background="@color/black"/>
            </RelativeLayout>




            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="144dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/llpassword"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:backgroundTint="#f8a519"
                android:layout_centerHorizontal="true"
                android:fontFamily="HelveticaNeue"
                android:text="@string/Signin"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtforgpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ForgotPass"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/btnSignIn"
                android:textSize="@dimen/margin_18sp"
                android:textStyle="bold"/>

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>